rename npm modul

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckeditor5-supersub",
+  "name": "ckeditor5-supsub",
   "version": "1.0.0",
   "description": "Superscript and subscript for cke5.",
   "keywords": [
